@@ -1,3 +1,8 @@
+2007-05-13  Matthew Barnes  <mbarnes@redhat.com>
+
+	* e-shell.c (impl_Shell_handleURI):
+	Revert the change from 2007-05-11.  (#407104)
+
 2007-05-12  Matthew Barnes  <mbarnes@redhat.com>
 
 	** Fixes part of bug #337616
